# proton-beam

./: .gitignore  CLOUDFORMATION_GUIDE.md  COMPRESSION_IMPLEMENTATION.md  Cargo.toml  DEPLOYMENT_1.2TB.md  ERROR_CATEGORIZATION.md  ERROR_HANDLING_REVIEW.md  LICENSE  MERGE_TOOL_README.md  OPTIMIZATION_SUMMARY.md  QUICKSTART_CLOUDFORMATION.md  README.md  SETUP_SUMMARY.md  justfile
.cursor/rules/: context.mdc
.github/: BENCHMARK_CI_README.md
.github/workflows/: README.md  benchmarks.yml  ci.yml
clickhouse/: IMPORT_README.md  MACOS_SETUP.md  README.md  SUMMARY.md  TESTING.md  bootstrap.sh  clickhouse-import.toml.example  schema.sql  start-clickhouse-macos.sh
docs/: ARCHITECTURE.md  AWS_ARCHITECTURE.md  AWS_INDEX.md  BENCHMARKING.md  BENCHMARKS_README.md  BENCHMARK_PRACTICES.md  BENCHMARK_STATUS.md  BENCHMARK_SUMMARY.md  BENCHMARK_SUMMARY_ANSWER.md  CI_CD_SETUP.md  CLICKHOUSE_SCHEMA.md  COMPRESSION_SUPPORT.md  DEVELOPER_GUIDE.md  INDEX.md  JUSTFILE_COMMANDS.md  PARALLEL_PROCESSING.md  PREPROCESSING.md  PROJECT_PLAN.md  PROJECT_STATUS.md  PROTOBUF_SCHEMA.md  QUICK_REFERENCE.md  S3_FEATURE.md  SQLITE_OPTIMIZATIONS.md  STATUS.md  SUMMARY.md  TESTING_AWS.md  TESTING_CHECKLIST.md
examples/: CLI_README.md  README.md  config.toml  sample_events.jsonl
examples/scripts/: README.md  analyze_errors.sh  basic_conversion.sh  compare_sizes.sh  daily_backup.sh  fast_conversion.sh  import_to_clickhouse.sh  preprocess_filtering.sh  stream_from_relay.sh  test_examples.sh
proton-beam-cli/: Cargo.toml  README.md
proton-beam-cli/benches/: pipeline_bench.rs
proton-beam-cli/src/: clickhouse.rs  input.rs  lib.rs  main.rs  progress.rs  s3.rs  storage.rs
proton-beam-cli/tests/: integration_tests.rs
proton-beam-core/: Cargo.toml  README.md  build.rs
proton-beam-core/benches/: builder_bench.rs  conversion_bench.rs  index_bench.rs  storage_bench.rs  validation_bench.rs
proton-beam-core/examples/: api_showcase.rs
proton-beam-core/proto/: nostr.proto
proton-beam-core/src/: builder.rs  conversion.rs  display.rs  error.rs  index.rs  iter.rs  lib.rs  serde_support.rs  storage.rs  validation.rs
proton-beam-core/tests/: integration_tests.rs
proton-beam-daemon/: Cargo.toml
proton-beam-daemon/src/: main.rs
scripts/: analyze-benchmark-history.sh  aws-cloudformation.yaml  aws-deploy.sh  check-all.sh  check-clippy.sh  check-docs.sh  check-fmt.sh  check-msrv.sh  cloudformation-deployer-policy.json  deploy-cloudformation.sh  iam-policy-example.json  run-benchmarks.sh
test_output/: 2025_09_27.pb  errors.jsonl
test_stdin/: 2025_09_27.pb
