[package]
name = "proton-beam-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for converting Nostr events to Protocol Buffers"

[[bin]]
name = "proton-beam"
path = "src/main.rs"

[dependencies]
proton-beam-core = { path = "../proton-beam-core" }

# CLI
clap = { workspace = true }
indicatif = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Date/Time handling
chrono = { workspace = true }

# JSON handling
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.0"

