[package]
name = "proton-beam-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for converting Nostr events between JSON and Protocol Buffers"
keywords = ["nostr", "protobuf", "bitcoin", "decentralized"]
categories = ["encoding", "cryptography"]

[dependencies]
# Protobuf
prost = { workspace = true }
prost-types = { workspace = true }

# Nostr
nostr-sdk = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

