[package]
name = "proton-beam-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for converting Nostr events between JSON and Protocol Buffers"
keywords = ["nostr", "protobuf", "bitcoin", "decentralized"]
categories = ["encoding", "cryptography"]

[dependencies]
# Protobuf
prost = { workspace = true }
prost-types = { workspace = true }

# Nostr
nostr-sdk = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Database
rusqlite = { workspace = true }

# Compression
flate2 = { workspace = true }

# Cryptography / Hashing
secp256k1 = { version = "0.28", features = ["global-context", "serde"] }
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[[bench]]
name = "index_bench"
harness = false

[[bench]]
name = "conversion_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "builder_bench"
harness = false

