[package]
name = "proton-beam-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Daemon for monitoring Nostr relays and converting events to Protocol Buffers"

[[bin]]
name = "proton-beam-daemon"
path = "src/main.rs"

[dependencies]
proton-beam-core = { path = "../proton-beam-core" }

# Nostr
nostr-sdk = { workspace = true }

# Async
tokio = { workspace = true }

# Configuration
toml = { workspace = true }
serde = { workspace = true }

# Database
rusqlite = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

